# sycl-math

./: .clangd  CMakeLists.txt  README.md
include/smath/: core.h  matrix.h
samples/: CMakeLists.txt  main.cpp  matrix.cpp
test/: CMakeLists.txt  test_gemm.cpp  test_matrix.cpp
